// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer should lex 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 25,
        "line": 3,
      },
      "source": "test.html",
      "start": Object {
        "column": 14,
        "line": 3,
      },
    },
    "range": Array [
      50,
      61,
    ],
    "type": 1,
    "value": " expression ",
  },
]
`;

exports[`lexer should lex 2`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 26,
        "line": 2,
      },
      "source": "test.html",
      "start": Object {
        "column": 15,
        "line": 2,
      },
    },
    "range": Array [
      22,
      33,
    ],
    "type": 1,
    "value": " expression ",
  },
]
`;
